# git-the-branch

./: .gitignore  README.md  gtb.py  gtb_legacy.py  iteration.ipynb  pyproject.toml
LICENSES/: GitPython License  LICENSE
git-the-branch/: gtb.py
git_the_branch/: __init__.py  gtb.py
jupyter-temp/: test.md
tests/: test_git_the_branch.py
