[tool.poetry]
name = "git-the-branch"
version = "0.1.0"
description = "A tiny Python utility that shows you the local git branches in the current directory along with the last commit date on those branches."
authors = ["Mario Jason Braganza <jason@janusworx.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
GitPython = "^3.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
