[tool.poetry]
name = "git_the_branch"
version = "0.1.0"
description = ""
authors = ["Mario Jason Braganza <jason@janusworx.com>"]

[tool.poetry.dependencies]
python = "^3.6"
GitPython = "^3.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
